<resources>
    <string name="app_name">格力Z+</string>
    <string name="login_account_hint">请输入账号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="splash_skip">点击跳过</string>
    <string name="login_rmbr_pwd">记住密码</string>
    <string name="login_btn">登录</string>
    <string name="login_version">格力Z+智能家居管理监控 v1.0</string>
    <string name="login_reg_btn">注册</string>
</resources>
