<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"

                android:focusableInTouchMode="true">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:layout_above="@+id/ll_logindata"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"

            android:src="@mipmap/icon_monitor"
            tools:targetApi="lollipop"/>
    <LinearLayout
            android:id="@+id/ll_logindata"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"

                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:background="@android:color/white">
            <ImageView android:layout_width="40dp"
                       android:layout_height="40dp"
                       android:id="@+id/img_account"

                       android:layout_alignParentStart="true"
                       android:layout_alignParentLeft="true"
                       android:layout_centerVertical="true"
                       android:paddingRight="8dp"
                       android:paddingLeft="8dp"
                       android:src="@drawable/account"/>
            <View
                    android:id="@+id/viewAccount"
                    android:layout_width="1dip"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@+id/img_account"
                    android:background="@color/colorDivider"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/viewAccount"
                    android:id="@+id/et_account"
                    android:background="@null"
                    android:textColorHint="@color/colorDivider"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryText"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:hint="@string/login_account_hint"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"

                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:background="@android:color/white">
            <ImageView android:layout_width="40dp"
                       android:layout_height="40dp"
                       android:id="@+id/img_passwd"
                       android:layout_alignParentStart="true"
                       android:layout_alignParentLeft="true"
                       android:layout_centerVertical="true"
                       android:paddingRight="8dp"
                       android:paddingLeft="8dp"
                       android:src="@drawable/password"/>
            <View
                    android:id="@+id/viewPasswd"
                    android:layout_width="1dip"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@+id/img_passwd"
                    android:background="@color/colorDivider"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/viewPasswd"
                    android:id="@+id/et_password"
                    android:background="@null"
                    android:textColorHint="@color/colorDivider"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryText"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:hint="@string/login_pwd_hint"/>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
            android:id="@+id/rl_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_logindata"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
        <CheckBox
                android:id="@+id/cb_mark_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"

                android:background="@null"
                android:checked="false"
                android:duplicateParentState="false"
                android:text="@string/login_rmbr_pwd"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/colorSecondaryText"
                android:textSize="15sp"
                android:buttonTint="@color/colorPrimary"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reg_btn"
                android:text="@string/login_reg_btn"
                android:gravity="right|center_vertical"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:background="@null">
        </Button>
    </RelativeLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dp"
                  android:paddingRight="16dp"
                  android:paddingLeft="16dp"
                  android:layout_below="@+id/rl_regist">
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_btn"
                android:layout_marginBottom="4dp"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:background="@drawable/login_style"
                android:text="@string/login_btn"
                android:textSize="15sp"
                android:foreground="?android:attr/selectableItemBackground"
                android:outlineProvider="background"
                android:textColor="@android:color/white"
                tools:targetApi="lollipop">
        </Button>

    </LinearLayout>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_centerHorizontal="true"
              android:textSize="12sp"
              android:textColor="@color/colorSecondaryText"
              android:text="@string/login_version"/>
</RelativeLayout>
